<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/infoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="2"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:layout_rowSpan="1"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/GameRules"/>

    <TextView
        android:id="@+id/player1NameView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight=".3"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:gravity="center"
        android:text="@string/p1NameHere" />

    <EditText
        android:id="@+id/player1NameEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight=".3"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:hint="@string/p1NameHint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/player2NameView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowSpan="1"
        android:layout_rowWeight=".3"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:gravity="center"
        android:text="@string/p2NameHere"/>

    <EditText
        android:id="@+id/player2NameEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowSpan="1"
        android:layout_rowWeight=".3"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:hint="@string/p2NameHint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="textStart" />

    <Button
        android:id="@+id/nextButton"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:text="@string/nextButton"/>


</GridLayout>